--- a/package.json
+++ b/package.json
@@ -18,14 +18,19 @@
     "http-status": "^1.7.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.3",
+    "prettier": "^3.3.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@eslint/js": "^9.11.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "eslint": "^9.11.0",
+    "globals": "^15.9.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.6.0"
   }
 }
