--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.7",
     "eslint": "^9.11.0",
     "globals": "^15.9.0",
     "ts-node-dev": "^2.0.0",
