--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
-  "version": "1",
+  "version": 2,
   "builds": [
     {
       "src": "dist/server.js",
-      "use": "@vercel/now"
+      "use": "@vercel/node"
     }
   ],
   "routes": [
